--- a/app/src/main/res/layout/activity_programiranje.xml
+++ b/app/src/main/res/layout/activity_programiranje.xml
@@ -11,7 +11,8 @@
         android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="2"
+        android:layout_marginTop="20dp"
+        android:numColumns="1"
         android:horizontalSpacing="6dp"
         android:verticalSpacing="6dp"/>
 
