--- a/app/src/main/res/layout/activity_programiranje_detail.xml
+++ b/app/src/main/res/layout/activity_programiranje_detail.xml
@@ -11,7 +11,8 @@
     <ImageView
         android:id="@+id/slika"
         android:layout_width="match_parent"
-        android:layout_height="150dp"/>
+        android:layout_height="150dp"
+        android:scaleType="centerCrop"/>
     <TextView
         android:id="@+id/imeKnjige"
         android:layout_width="wrap_content"
