--- a/app/src/main/res/layout/activity_unesite_knjigu.xml
+++ b/app/src/main/res/layout/activity_unesite_knjigu.xml
@@ -23,6 +23,18 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:hint="Ovdje upišite novu knjigu"/>
+    <EditText
+        android:id="@+id/editTextUnesiAutora"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:hint="Ovdje upišite ime autora"/>
+    <EditText
+        android:id="@+id/editTextUnesiStranice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:hint="Ovdje upišite broj stranica"/>
     <Button
         android:id="@+id/gumbUnesiKnjigu"
         android:layout_width="wrap_content"
