--- a/app/src/main/res/layout/activity_hardver.xml
+++ b/app/src/main/res/layout/activity_hardver.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".draweraktivnosti.HardverActivity">
+    android:orientation="vertical"
+    android:padding="20dp"
+    tools:context=".draweraktivnosti.ProgramiranjeActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Ovo su sve knjige o Hardveru!"
+        android:textColor="#000"
+        android:textSize="22dp"/>
+
+    <ListView
+        android:id="@+id/listViewHardver"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="40dp"
+        android:dividerHeight="5dp"/>
+
+</LinearLayout>
