--- a/app/src/main/res/layout/activity_programiranje.xml
+++ b/app/src/main/res/layout/activity_programiranje.xml
@@ -18,7 +18,7 @@
         android:textSize="22dp"/>
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/listViewProgramiranje"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="40dp"
