--- a/app/src/main/res/menu/operativnisustavi_menu.xml
+++ b/app/src/main/res/menu/operativnisustavi_menu.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/programiranje_menu"
         app:showAsAction="always"
@@ -9,4 +8,5 @@
         android:icon="@drawable/ic_baseline_add_box_24"
         android:iconTint="@color/white">
     </item>
+
 </menu>
