Dodani vizualni dio za aktivnost koja ce se otvoriti kada kliknemo action button u action bar-u.

--- a/app/src/main/res/layout/activity_unesite_knjigu_hardver.xml
+++ b/app/src/main/res/layout/activity_unesite_knjigu_hardver.xml
@@ -1,9 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="30dp"
     tools:context=".UnesiKnjiguActivity.UnesiteKnjiguHardverActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="Ovdje možete unijeti novu knjigu!"
+        android:textColor="#000"
+        android:textSize="22dp"
+        android:layout_gravity="center_horizontal"/>
+    <EditText
+        android:id="@+id/editTextUnesiKnjiguHardver"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:hint="Ovdje upišite novu knjigu"/>
+    <EditText
+        android:id="@+id/editTextUnesiAutoraHardver"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:hint="Ovdje upišite ime autora"/>
+    <EditText
+        android:id="@+id/editTextUnesiStraniceHardver"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:hint="Ovdje upišite broj stranica"/>
+    <Button
+        android:id="@+id/gumbUnesiKnjiguHardver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Unesi"
+        android:textSize="25dp"/>
+</LinearLayout>
