Dodan vizualni dio za aktivnost koja se otvori kada kliknemo neki item iz listView-a.

--- a/app/src/main/res/layout/activity_item_clicked_programiranje.xml
+++ b/app/src/main/res/layout/activity_item_clicked_programiranje.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="40dp"
-    tools:context=".ItemClickActivity">
+    tools:context=".ItemClickActivity.ItemClickProgramiranjeActivity">
 
     <TextView
         android:layout_width="wrap_content"
