--- a/app/src/main/res/layout/activity_item_clicked_hardver.xml
+++ b/app/src/main/res/layout/activity_item_clicked_hardver.xml
@@ -1,9 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="40dp"
     tools:context=".ItemClickActivity.ItemClickedHardverActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Želite li posuditi ovu knjigu?"
+        android:textSize="22dp"
+        android:textColor="#000"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Ako želite molimo Vas upišite svoje podatke."
+        android:textSize="22dp"
+        android:textColor="#000"/>
+    <EditText
+        android:id="@+id/editTextPosudbaImeHardver"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:hint="Ovdje upišite svoje ime..."/>
+    <EditText
+        android:id="@+id/editTextPosudbaPrezimeHardver"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:hint="Ovdje upišite svoje prezime..."/>
+    <EditText
+        android:id="@+id/editTextPosudbaEmailHardver"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:hint="Ovdje upišite svoj email..."/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Posudi"
+        android:textSize="24dp"/>
+
+</LinearLayout>
