--- a/app/src/main/res/layout/activity_modify_operativni_sustavi.xml
+++ b/app/src/main/res/layout/activity_modify_operativni_sustavi.xml
@@ -1,9 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="25dp"
     tools:context=".ModifyActivity.ModifyOperativniSustaviActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ovdje možete ažurirati zapise!"
+        android:textSize="24dp"
+        android:layout_margin="30dp"
+        android:textColor="#000"
+        android:layout_gravity="center_horizontal" />
+
+    <EditText
+        android:id="@+id/modify_nameOperativniSustavi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Unesite novo ime knjige"/>
+    <EditText
+        android:id="@+id/modify_authorOperativniSustavi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint="Unesite novog pisca"/>
+    <EditText
+        android:id="@+id/modify_pagesOperativniSustavi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint="Unesite novi broj stranica"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="2"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/gumbUpdateOperativniSustavi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_weight="1"
+            android:layout_marginRight="15dp"
+            android:text="Update"
+            android:textSize="20dp"/>
+        <Button
+            android:id="@+id/gumbDeleteOperativniSustavi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="15dp"
+            android:text="Delete"
+            android:textSize="20dp"/>
+    </LinearLayout>
+
+</LinearLayout>
