--- a/app/src/main/res/layout/activity_modify_programiranje.xml
+++ b/app/src/main/res/layout/activity_modify_programiranje.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="25dp"
-    tools:context=".ModifyActivity">
+    tools:context=".ModifyActivity.ModifyProgramiranjeActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,20 +19,20 @@
         android:layout_gravity="center_horizontal" />
 
     <EditText
-        android:id="@+id/modify_name"
+        android:id="@+id/modify_nameProgramiranje"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Unesite novo ime knjige"/>
     <EditText
-        android:id="@+id/modify_author"
+        android:id="@+id/modify_authorProgramiranje"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="Unesite novog pisca"/>
     <EditText
-        android:id="@+id/modify_pages"
+        android:id="@+id/modify_pagesProgramiranje"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -45,7 +45,7 @@
         android:weightSum="2"
         android:orientation="horizontal">
         <Button
-            android:id="@+id/gumbUpdate"
+            android:id="@+id/gumbUpdateProgramiranje"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -54,7 +54,7 @@
             android:text="Update"
             android:textSize="20dp"/>
         <Button
-            android:id="@+id/gumbDelete"
+            android:id="@+id/gumbDeleteProgramiranje"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
