--- a/app/src/main/res/menu/hardver_menu.xml
+++ b/app/src/main/res/menu/hardver_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/programiranje_menu"
+        android:id="@+id/programiranje_menuAdd"
         app:showAsAction="always"
         android:title="programiranje"
         android:icon="@drawable/ic_baseline_add_box_24"
