--- a/app/src/main/res/menu/programiranje_menu.xml
+++ b/app/src/main/res/menu/programiranje_menu.xml
@@ -2,10 +2,19 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/programiranje_menu"
+        android:id="@+id/programiranje_menuSearch"
+        android:title="programiranjeSearch"
+        android:icon="@drawable/ic_baseline_search_24"
         app:showAsAction="always"
-        android:title="programiranje"
+        android:orderInCategory="1"
+        android:iconTint="@color/white">
+    </item>
+    <item
+        android:id="@+id/programiranje_menuAdd"
+        app:showAsAction="always"
+        android:title="programiranjeAdd"
         android:icon="@drawable/ic_baseline_add_box_24"
         android:iconTint="@color/white">
     </item>
