--- a/app/src/main/res/layout/activity_wish_list_hardver.xml
+++ b/app/src/main/res/layout/activity_wish_list_hardver.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProgramiranjeMenuActivity.PosudeneKnjigeActivity">
+    tools:context=".HardverMenuActivity.WishListHardverActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
