--- a/app/src/main/res/layout/activity_wish_list_programiranje.xml
+++ b/app/src/main/res/layout/activity_wish_list_programiranje.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProgramiranjeMenuActivity.WishListActivity">
+    tools:context=".ProgramiranjeMenuActivity.WishListProgramiranjeActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
