--- a/app/src/main/res/menu/operativnisustavi_menu.xml
+++ b/app/src/main/res/menu/operativnisustavi_menu.xml
@@ -2,6 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/programiranje_menuMore"
+        android:title="programiranjeMore"
+        android:icon="@drawable/ic_baseline_login_24"
+        app:showAsAction="always"
+        android:iconTint="@color/white"
+        android:orderInCategory="2">
+        <menu>
+            <item
+                android:id="@+id/posudeneKnjige"
+                android:title="Posuđene knjige!"
+                app:showAsAction="never"/>
+            <item
+                android:id="@+id/wishListKnjige"
+                android:title="Wish List"
+                app:showAsAction="never"/>
+        </menu>
+    </item>
+    <item
         android:id="@+id/operativni_sustavi_menuSearch"
         android:title="programiranjeSearch"
         android:icon="@drawable/ic_baseline_search_24"
