--- a/app/src/main/res/layout/activity_wish_list_mreze_i_protokoli.xml
+++ b/app/src/main/res/layout/activity_wish_list_mreze_i_protokoli.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MrezeIProtokoliMenuActivity.WishListMrezeIProtokoliActivity">
+    android:orientation="vertical"
+    android:padding="20dp"
+    tools:context=".ProgramiranjeMenuActivity.WishListProgramiranjeActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ovo su vaše omiljenje knjige"
+        android:layout_gravity="center"
+        android:textSize="26dp"
+        android:textColor="#000"/>
+    <ListView
+        android:id="@+id/listViewWishListMrezeIProtokoli"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp"/>
+
+</LinearLayout>
