Dodan check box u svaku modify aktivnost tako da se neka knjiga moze oznaciti kao omiljena.

--- a/app/src/main/res/layout/activity_f_a_b.xml
+++ b/app/src/main/res/layout/activity_f_a_b.xml
@@ -33,6 +33,7 @@
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
         android:layout_marginTop="20dp"
         android:hint="Vaš email"/>
     <EditText
