--- a/app/src/main/res/layout/activity_modify_programiranje.xml
+++ b/app/src/main/res/layout/activity_modify_programiranje.xml
@@ -63,5 +63,20 @@
             android:text="Delete"
             android:textSize="20dp"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Želite li ovu knjigu staviti na vašu listu želja?"
+            android:textSize="24dp"
+            android:textColor="#000"/>
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </LinearLayout>
