--- a/app/src/main/res/layout/activity_modify_hardver.xml
+++ b/app/src/main/res/layout/activity_modify_hardver.xml
@@ -76,8 +76,10 @@
             android:textSize="24dp"
             android:textColor="#000"/>
         <CheckBox
+            android:id="@+id/favoriteHardver"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:onClick="onFavoriteClickHardver"/>
     </LinearLayout>
 
 </LinearLayout>
