--- a/app/src/main/res/layout/activity_modify_mreze_i_protokoli.xml
+++ b/app/src/main/res/layout/activity_modify_mreze_i_protokoli.xml
@@ -75,8 +75,10 @@
             android:textSize="24dp"
             android:textColor="#000"/>
         <CheckBox
+            android:id="@+id/favoriteMrezeIProtokoli"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:onClick="onFavoriteClickMrezeIProtokoli"/>
     </LinearLayout>
 
 </LinearLayout>
