--- a/app/src/main/res/layout/activity_modify_operativni_sustavi.xml
+++ b/app/src/main/res/layout/activity_modify_operativni_sustavi.xml
@@ -75,8 +75,10 @@
             android:textSize="24dp"
             android:textColor="#000"/>
         <CheckBox
+            android:id="@+id/favoriteOperativniSustavi"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:onClick="onFavoriteClickOperativniSustavi"/>
     </LinearLayout>
 
 </LinearLayout>
