--- a/app/src/main/res/layout/activity_item_clicked_hardver.xml
+++ b/app/src/main/res/layout/activity_item_clicked_hardver.xml
@@ -55,9 +55,11 @@
         android:id="@+id/editTextPosudbaEmailHardver"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
         android:layout_marginTop="20dp"
         android:hint="Ovdje upišite svoj email..."/>
     <Button
+        android:id="@+id/gumbPosudi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
